chore: Replaced password4j with bouncy castle